Fixed overflow bug

--- a/css/style.css
+++ b/css/style.css
@@ -71,8 +71,6 @@ html {
     position: relative;
     
     background: rgba(0,0,0,0) center no-repeat;
-    
-    overflow: hidden;    
 }
 
 .info .about {
